<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HelpActivity"
    android:orientation="vertical"
    android:background="@drawable/bg_help">

    <ImageView
        android:id="@+id/btback"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/baseline_arrow_back_ios_24"
        android:layout_margin="15dp"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardBackgroundColor="@color/warna5">

        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/judul_help"
                android:fontFamily="@font/poppinssemibold"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textAlignment="center"
                android:layout_marginBottom="30dp"/>

            <LinearLayout
                android:layout_margin="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Email"
                    android:fontFamily="@font/poppinssemibold"
                    android:textColor="@color/black"
                    android:textSize="20sp"/>
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    app:cardCornerRadius="20dp"
                    app:cardBackgroundColor="@color/warna4">

                    <TextView
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/email"
                        android:fontFamily="@font/poppinssemibold"
                        android:textSize="15sp"
                        android:textColor="@color/white"/>

                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <LinearLayout
                android:layout_margin="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Website"
                    android:fontFamily="@font/poppinssemibold"
                    android:textColor="@color/black"
                    android:textSize="20sp"/>
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    app:cardCornerRadius="20dp"
                    app:cardBackgroundColor="@color/warna4">

                    <TextView
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/website"
                        android:fontFamily="@font/poppinssemibold"
                        android:textSize="15sp"
                        android:textColor="@color/white"/>

                </androidx.cardview.widget.CardView>
            </LinearLayout>
            <LinearLayout
                android:layout_margin="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Twitter"
                    android:fontFamily="@font/poppinssemibold"
                    android:textColor="@color/black"
                    android:textSize="20sp"/>
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    app:cardCornerRadius="20dp"
                    app:cardBackgroundColor="@color/warna4">

                    <TextView
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/pintarjaringan"
                        android:fontFamily="@font/poppinssemibold"
                        android:textSize="15sp"
                        android:textColor="@color/white"/>

                </androidx.cardview.widget.CardView>
            </LinearLayout>
            <LinearLayout
                android:layout_margin="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Phone"
                    android:fontFamily="@font/poppinssemibold"
                    android:textColor="@color/black"
                    android:textSize="20sp"/>
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    app:cardCornerRadius="20dp"
                    app:cardBackgroundColor="@color/warna4">

                    <TextView
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/phone"
                        android:fontFamily="@font/poppinssemibold"
                        android:textSize="15sp"
                        android:textColor="@color/white"/>

                </androidx.cardview.widget.CardView>
            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>